Added relationship between posts and users in the db

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,9 @@
 	<% include partials/head %>
 </head>
 <body>
-	<h1>Hello</h1>
+	<% include partials/navbar %>
+	<div class="container-fluid">
+		<h1>Welcome</h1>
+	</div>
 </body>
 </html>
