--- a/static/global.css
+++ b/static/global.css
@@ -8,3 +8,10 @@ body {
 	background-color: #854A1A;
 	border-radius: 10px;
 }
+
+.post {
+	margin: 10px;
+	padding: 10px;
+	background-color: #854A1A;
+	border-radius: 10px;
+}
