--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,7 @@
 	<% include partials/navbar %>
 	<div class="container-fluid">
 		<h1>Welcome</h1>
+		<p>This is a simple, somewhat boring social media</p>
 	</div>
 </body>
 </html>
