Changed /addPost and /addUser to /post and /user to make the app restful

--- a/views/users.ejs
+++ b/views/users.ejs
@@ -9,7 +9,7 @@
 	<div class="container-fluid">
 		<h1>Hello</h1>
 		<div class="new-user-form">
-			<form action="/addUser" method="post">
+			<form action="/user" method="post">
 				<input type="text" name="userFirstName" placeholder="First Name">
 				<input type="text" name="userLastName" placeholder="Last Name">
 				<input type="submit">
